# DashApp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DashApp.code-workspace  README.md  TODO.md  config.py  diagnose_gmail.py  loader.py  main.py  pyproject.toml
.claude/: settings.local.json
checkpoints/: 01-core-scaffold.md  02-gmail-tool.md  03-calendar-tool.md  03-gmail-widget-redesign.md  04-outlook-tool.md  05-outlook-calendar-tool.md  06-project-status-2026-02-19.md  07-jira-tool.md  08-jira-tool-and-logging.md  09-credential-migration.md  10-keyboard-navigation.md  11-packaging.md  12-remove-google-outlook-tools.md  13-confluence-tool.md
db/: manager.py
logs/: session_20260709_130736.md  session_20260709_133818.md
tests/: test_calendar_client.py  test_config.py  test_confluence_auth.py  test_confluence_client.py  test_db_manager.py  test_gmail_auth.py  test_gmail_client.py  test_jira_auth.py  test_jira_client.py  test_loader.py  test_log.py  test_outlook_auth.py  test_outlook_calendar_auth.py  test_outlook_calendar_client.py  test_outlook_client.py
tools/: base.py  widget.py
tools/calendar/: auth.py  client.py  manifest.json  tool.py
tools/confluence/: auth.py  client.py  manifest.json  tool.py
tools/demo/: manifest.json  tool.py
tools/gmail/: auth.py  client.py  manifest.json  tool.py
tools/jira/: auth.py  client.py  manifest.json  tool.py
tools/outlook/: auth.py  client.py  manifest.json  tool.py
tools/outlook_calendar/: auth.py  client.py  manifest.json  tool.py
tui/: app.py
tui/screens/: home.py
util/: log.py  paths.py
